# Advent2020

./: CMakeLists.txt  Day5.cpp  Day5.h  Day9.cpp  Day9.h  day1.cpp  day1.h  day10.cpp  day10.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day6.cpp  day6.h  day7.cpp  day7.h  day8.cpp  day8.h  main.cpp  utilities.cpp  utilities.h
