cmake_minimum_required(VERSION 3.17)
project(Advent2020)

set(CMAKE_CXX_STANDARD 20)

add_executable(Advent2020 main.cpp utilities.cpp utilities.h day1.h day1.cpp day2.cpp day2.h day3.cpp day3.h day4.cpp day4.h Day5.cpp Day5.h day6.cpp day6.h day7.cpp day7.h day8.cpp day8.h Day9.cpp Day9.h day10.cpp day10.h)